--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/vue": "^8.1.0",
     "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
+    "jsdom": "^24.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
