--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "jsdom": "^24.1.0",
+    "msw": "^2.3.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.6",
+    "whatwg-fetch": "^3.6.20"
   }
 }
