--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@testing-library/vue": "^8.1.0",
     "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
