--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.6",
+    "axios": "^1.7.2",
     "jsdom": "^24.1.0",
     "msw": "^2.3.1",
     "typescript": "^5.2.2",
