--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
+    "element-plus": "^2.7.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
@@ -24,6 +25,8 @@
     "jsdom": "^24.1.0",
     "msw": "^2.3.1",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.6",
