--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@pinia/testing": "^0.1.3",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/vue": "^8.1.0",
     "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
